Fix countdown view not showing

--- a/styles/arena.css
+++ b/styles/arena.css
@@ -6,6 +6,7 @@ section.view {
     left: 0;
     width: 100%;
     height: 100%;
+    background: black;
 }
 
 section.corners {
